# gen-ai

./: .gitignore  Dockerfile  README.md  cnn_weights.pth  diffusion_weights.pth  ebm_weights.pth  gan_weights.pth  pyproject.toml  train_cnn.py  train_diffusion_cifar.py  train_ebm_cifar.py  train_gan_mnist.py
app/: bigram_model.py  main.py
helper_lib/: data_loader.py  evaluator.py  generator.py  mnist_loader.py  model.py  trainer.py  utils.py
